Fix gap for Homepage sponsors desktop

--- a/src/public/less/components/landing-bottom.less
+++ b/src/public/less/components/landing-bottom.less
@@ -1020,6 +1020,7 @@
 
 				@media (min-width: @screen-sm-min) {
 					height: auto;
+					gap: 24px 39px;
 				}
 
 				>img {
